# onto-rel-e5

./: .gitignore  README.md  pyproject.toml
data/interim/: Ground Truth-Balanced.csv  Ground Truth.csv
data/processed/: Ground Truth-Balanced.jsonl  Ground Truth-Train.jsonl  Ground Truth-Validation.jsonl  Ground Truth.jsonl
data/raw/: Ground Truth.xlsx
models/fine_tuned/deberta-v3-large-v1/: id2label.json  label2id.json  metrics_val.json
notebooks/: course_relationship_inference_demo.ipynb.ipynb
prompts/: ground-truth-prompt.txt  synthetic-data-prompt.txt
resources/: environment-min.yml
scripts/: balance_ground_truth.py  convert_ground_truth_to_jsonl.py  export_ground_truth_from_excel.py  train_deberta_v3_large.py
